feat(): added github pages :rocket:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clean-architecture",
-  "homepage": "https://Sebosek.github.io/clean-architecture",
+  "homepage": "https://Sebosek.github.io/react-clean-architecture",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
